--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,3 @@
 .PWABadge-toast { color: black; }
+.cm-content { white-space: pre-wrap; word-break: normal; word-wrap: break-word; }
+.text-wrap { overflow-wrap: anywhere; }
